--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.5",
     "serve": "^14.0.1",
