--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "zoa",
+  "name": "pano",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@airbnb/lunar": "^3.29.0",
     "@airbnb/lunar-icons": "^3.1.1",
-    "@firebase/app": "^0.7.32",
-    "@firebase/auth": "^0.20.6",
+    "@firebase/app": "^0.9.4",
+    "@firebase/auth": "^0.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/firebase": "^3.2.1",
+    "@types/highlightjs": "^9.12.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.17",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.6",
-    "firebase": "^9.9.4",
-    "firebaseui": "^6.0.1",
+    "@types/recharts": "^1.8.24",
+    "firebase": "^9.17.2",
+    "firebaseui": "^6.0.2",
+    "highlight.js": "^11.6.0",
     "immer": "^9.0.15",
+    "nivo": "^0.31.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
+    "react-charts": "^3.0.0-beta.54",
     "react-dom": "^18.2.0",
-    "react-firebase-hooks": "^5.0.3",
+    "react-firebase-hooks": "^5.1.1",
     "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.4.3",
     "recoil": "^0.7.5",
     "serve": "^14.0.1",
     "typescript": "^4.8.2",
